@@ -510,7 +510,7 @@ sub docSubSection($$$$)
 sub closeSubSection()
 {   my $self       = shift;
     my $subsection = delete $self->{OPM_subsection};
-    $self;
+    $self->closeSubSubSection;
 }
 
 
@@ -549,7 +549,7 @@ sub docSubSubSection($$$$)
 sub closeSubSubSection()
 {   my $self = shift;
     delete $self->{OPM_subsubsection};
-    $self;
+    $self->closeSubroutine;
 }
 
 #-------------------------------------------
@@ -745,6 +745,9 @@ sub docExample($$$$)
 
     $line =~ s/^=examples?\s*//;
     $line =~ s/^\#.*//;
+
+warn "example $line";
+warn $self->{OPM_subroutine}, $self->{OPM_subsubsection}, $self->{OPM_subsection}, $self->{OPM_section}, $self->{OPM_chapter}, "\n";
 
     my $container = $self->{OPM_subroutine}
                  || $self->{OPM_subsubsection}
