@@ -4,6 +4,9 @@ explicitly stated otherwise.
 
 version 2.03:
 
+	Fixes:
+	- wrong place for section examples.
+
 version 2.02: Wed  8 Dec 13:41:32 CET 2021
 
 	Fixes:
